cabal-version:      3.0
name:               sched
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             cutsea110
maintainer:         cutsea110@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    exposed-modules:  Sched
                      Types
                      Writer
    build-depends:    base ^>=4.21.0.0,
                      process ^>=1.6,
                      text ^>=2.1,
                      time ^>=1.14
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall

executable sched
    -- Import common warning flags.
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.21.0.0,
                      process ^>=1.6,
                      text ^>=2.1,
                      time ^>=1.14,
                      
                      sched
    hs-source-dirs:   app
    other-modules:    Opts
    default-language: Haskell2010
